--- a/site/index.html
+++ b/site/index.html
@@ -33,6 +33,15 @@
         </div>
     </div>
 
+
+    <div class="banner">
+        <!-- <img src="assets/img4.jpg" height="516px" width="1351px"> -->
+        <div class="container">
+            <span>We tell stories about dreams, and the journeys our unconventional heroes take to make them come
+                true.</span>
+        </div>
+    </div>
+
 </body>
 
 </html>
