mudando de tema de dreamworks para shrek

--- a/site/filmes.html
+++ b/site/filmes.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 
 <head>
-    <title>Shrek | Home</title>
-    <link rel="stylesheet" href="css/index.css">
+    <title>Shrek | Filmes</title>
+    <link rel="stylesheet" href="css/filmes.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                     <a href="login.html"><span>Login</span></a>
                 </div>
                 <div class="cadastro">
-                    <a href="#">Cadastro</a>a
+                    <a href="#">Cadastro</a>
                 </div>
             </div>
             </ul>
