pagina filmes feita

--- a/site/filmes.html
+++ b/site/filmes.html
@@ -10,17 +10,17 @@
     <div class="header">
         <div class="container">
             <div class="titulo">
-                <h1>SHREK</h1>
+                <img src="assets/logo.svg" alt="">
             </div>
 
             <div class="navbar">
                 <a href="index.html">Home</a>
-                <a href="filmes.html">Filmes</a>
+                <a href="filmes.html" class="agora">Filmes</a>
                 <a href="personagens.html">Personagens</a>
                 <a href="curiosidades.html">Curiosidades</a>
             </div>
 
-            
+
             <div class="cadastroLogin">
                 <div class="login">
                     <a href="login.html"><span>Login</span></a>
@@ -29,16 +29,55 @@
                     <a href="#">Cadastro</a>
                 </div>
             </div>
-            </ul>
         </div>
     </div>
 
-    <!-- <div class="banner">
+    <div class="filmes">
         <div class="container">
-            <span>We tell stories about dreams, and the journeys our unconventional heroes take to make them come
-                true.</span>
+            <div class="cima">
+                <a href="#">
+                    <div class="card">
+                        <img src="assets/shrek1.svg">
+                        <span>SHREK 1</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="card">
+                        <img src="assets/shrek2.svg">
+                        <span>SHREK 2</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="card">
+                        <img src="assets/shrek3.svg">
+                        <span>SHREK 3</span>
+                    </div>
+                </a>
+            </div>
+
+            <div class="baixo">
+                <a href="#">
+                    <div class="card">
+                        <img src="assets/shrek4.svg">
+                        <span>SHREK 4</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="card">
+                        <img src="assets/gato1.svg">
+                        <span>GATO DE BOTAS</span>
+                    </div>
+                </a>
+                <a href="#">
+                    <div class="card">
+                        <img src="assets/gato2.svg">
+                        <span>GATO DE BOTAS 2</span>
+                    </div>
+                </a>
+            </div>
         </div>
-    </div> -->
+    </div>
+
 
 </body>
 
