--- a/site/curiosidades.html
+++ b/site/curiosidades.html
@@ -17,7 +17,7 @@
                 <a href="index.html">Home</a>
                 <a href="filmes.html">Filmes</a>
                 <a href="personagens.html">Personagens</a>
-                <a href="curiosidades.html">Curiosidades</a>
+                <a href="curiosidades.html" class="agora">Curiosidades</a>
             </div>
 
             
