--- a/site/filmes.html
+++ b/site/filmes.html
@@ -26,7 +26,7 @@
                     <a href="login.html"><span>Login</span></a>
                 </div>
                 <div class="cadastro">
-                    <a href="#">Cadastro</a>
+                    <a href="cadastro.html"><span>Cadastro</span></a>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
                 <a href="#">
                     <div class="card">
                         <img src="assets/shrek1.svg">
-                        <span>SHREK 1</span>
+                        <span>SHREK</span>
                     </div>
                 </a>
                 <a href="#">
