--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="navbar">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="agora">Home</a>
                 <a href="filmes.html">Filmes</a>
                 <a href="personagens.html">Personagens</a>
                 <a href="curiosidades.html">Curiosidades</a>
@@ -26,7 +26,7 @@
                     <a href="login.html"><span>Login</span></a>
                 </div>
                 <div class="cadastro">
-                    <a href="#">Cadastro</a>a
+                    <a href="#">Cadastro</a>
                 </div>
             </div>
             </ul>
