--- a/site/personagens.html
+++ b/site/personagens.html
@@ -16,7 +16,7 @@
             <div class="navbar">
                 <a href="index.html">Home</a>
                 <a href="filmes.html">Filmes</a>
-                <a href="personagens.html">Personagens</a>
+                <a href="personagens.html" class="agora">Personagens</a>
                 <a href="curiosidades.html">Curiosidades</a>
             </div>
 
