--- a/site/filmes1.html
+++ b/site/filmes1.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Shrek | Filmes</title>
-    <link rel="stylesheet" href="css/filmes.css">
+    <link rel="stylesheet" href="css/filmes1.css">
 </head>
 
 <body>
@@ -39,39 +39,6 @@
                     <div class="card">
                         <img src="assets/shrek1.svg">
                         <span>SHREK</span>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="card">
-                        <img src="assets/shrek2.svg">
-                        <span>SHREK 2</span>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="card">
-                        <img src="assets/shrek3.svg">
-                        <span>SHREK 3</span>
-                    </div>
-                </a>
-            </div>
-
-            <div class="baixo">
-                <a href="#">
-                    <div class="card">
-                        <img src="assets/shrek4.svg">
-                        <span>SHREK 4</span>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="card">
-                        <img src="assets/gato1.svg">
-                        <span>GATO DE BOTAS</span>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="card">
-                        <img src="assets/gato2.svg">
-                        <span>GATO DE BOTAS 2</span>
                     </div>
                 </a>
             </div>
