--- a/site/index.html
+++ b/site/index.html
@@ -26,7 +26,7 @@
                     <a href="login.html"><span>Login</span></a>
                 </div>
                 <div class="cadastro">
-                    <a href="#">Cadastro</a>
+                    <a href="cadastro.html"><span>Cadastro</span></a>
                 </div>
             </div>
             </ul>
