--- a/site/login.html
+++ b/site/login.html
@@ -22,15 +22,23 @@
                             <input type="password" id="inputSenha" class="input">
                         </div>
                     </div>
-                    <a href="login.html">
-                        <button class="botao">
-                            Entrar
-                        </button>
-                    </a>
+
+                    <div class="botoes">
+                        <a href="index.html">
+                            <button class="botao voltar">
+                                Voltar
+                            </button>
+                        </a>
+                        <a href="login.html">
+                            <button class="botao ir">
+                                Entrar
+                            </button>
+                        </a>
+                    </div>
                 </div>
 
                 <div class="direita">
-                    <img src="assets/shrekbrabo.svg" height="600px">
+                    <img src="assets/shrekbrabo.svg" height="600px" width="600px">
                 </div>
             </div>
         </div>
