--- a/site/cadastro.html
+++ b/site/cadastro.html
@@ -31,13 +31,12 @@
 
                     <div class="botoes">
                         <a href="index.html">
-                            <button class="botao">
+                            <button class="botao voltar">
                                 Voltar
                             </button>
                         </a>
-
                         <a href="login.html">
-                            <button class="botao">
+                            <button class="botao ir">
                                 Cadastrar
                             </button>
                         </a>
