tela de filmes refeita

--- a/site/cadastro.html
+++ b/site/cadastro.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Shrek | Cadastro</title>
-    <link rel="stylesheet" href="css/cadastroLogin.css">
+    <link rel="stylesheet" href="css/cadastroLogin.css" />
 </head>
 
 <body>
@@ -14,42 +14,37 @@
                     <span class="titulo">Criar nova conta</span>
                     <div class="campo">
                         <span>Nome:</span>
-                        <input id="inputNome" class="input">
+                        <input id="inputNome" class="input" />
                     </div>
                     <div class="campo">
                         <span>Email:</span>
-                        <input id="inputEmail" class="input">
+                        <input id="inputEmail" class="input" />
                     </div>
                     <div class="campo">
                         <span>Senha:</span>
-                        <input type="password" id="inputSenha" class="input">
+                        <input type="password" id="inputSenha" class="input" />
                     </div>
                     <div class="campo">
                         <span>Confirmar senha:</span>
-                        <input type="password" id="inputConfirmarSenha" class="input">
+                        <input type="password" id="inputConfirmarSenha" class="input" />
                     </div>
 
                     <div class="botoes">
                         <a href="index.html">
-                            <button class="botao voltar">
-                                Voltar
-                            </button>
+                            <button class="botao voltar">Voltar</button>
                         </a>
                         <a href="login.html">
-                            <button class="botao ir">
-                                Cadastrar
-                            </button>
+                            <button class="botao ir">Cadastrar</button>
                         </a>
                     </div>
                 </div>
 
                 <div class="direita">
-                    <img src="assets/shrekfeliz.svg" height="600px">
+                    <img src="assets/shrekfeliz.svg" height="600px" />
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
