--- a/site/filmes.html
+++ b/site/filmes.html
@@ -10,14 +10,13 @@
     <div class="header">
         <div class="container">
             <div class="titulo">
-                <img src="assets/logo.svg" alt="">
+                <img src="assets/logo.svg" height="100%" alt="">
             </div>
 
             <div class="navbar">
                 <a href="index.html">Home</a>
                 <a href="filmes.html" class="agora">Filmes</a>
                 <a href="personagens.html">Personagens</a>
-                <a href="curiosidades.html">Curiosidades</a>
             </div>
 
 
@@ -34,47 +33,147 @@
 
     <div class="filmes">
         <div class="container">
-            <div class="cima">
-                <a href="#">
+            <div class="linha">
+                <a href="filme1.html">
                     <div class="card">
-                        <img src="assets/shrek1.svg">
-                        <span>SHREK</span>
+                        <img src="assets/shrek1.svg" height="100%">
+                        <div class="info">
+                            <div class="nome">
+                                <span class="agora">SHREK</span>
+                            </div>
+                            <div class="detalhe">
+                                <span>Ano de estreia: 2001</span><br>
+                                <span>Gênero: Animação, Aventura, Comédia e Fantasia</span><br>
+                                <span>Duração: 89m</span><br>
+                            </div>
+                            <div class="sinopse">
+                                <span>Sinopse: Um ogro tem sua vida invadida por personagens de contos de fadas que
+                                    acabam
+                                    com a tranquilidade de seu lar. Ele faz um acordo pra resgatar uma princesa..
+                                </span>
+                            </div>
+                        </div>
                     </div>
                 </a>
-                <a href="#">
+
+                <a href="">
                     <div class="card">
-                        <img src="assets/shrek2.svg">
-                        <span>SHREK 2</span>
-                    </div>
-                </a>
-                <a href="#">
-                    <div class="card">
-                        <img src="assets/shrek3.svg">
-                        <span>SHREK 3</span>
+                        <img src="assets/shrek2.svg" height="100%">
+                        <div class="info">
+                            <div class="nome">
+                                <span class="agora">SHREK 2</span>
+                            </div>
+                            <div class="detalhe">
+                                <span>Ano de estreia: 2004</span><br>
+                                <span>Gênero: Animação, Aventura, Comédia e Fantasia</span><br>
+                                <span>Duração: 93m</span><br>
+                            </div>
+                            <div class="sinopse">
+                                <span>Sinopse: Depois de enfrentar um dragão que cospe fogo e o terrível Lorde Farquaad
+                                    para
+                                    obter a mão da Princesa Fiona, Shrek agora enfrenta o seu maior desafio: os pais da
+                                    noiva.</span>
+                            </div>
+                        </div>
                     </div>
                 </a>
             </div>
 
-            <div class="baixo">
-                <a href="#">
+            <div class="linha">
+                <a href="">
                     <div class="card">
-                        <img src="assets/shrek4.svg">
-                        <span>SHREK 4</span>
+                        <img src="assets/shrek3.svg" height="100%">
+                        <div class="info">
+                            <div class="nome">
+                                <span class="agora">SHREK 3</span>
+                            </div>
+                            <div class="detalhe">
+                                <span>Ano de estreia: 2007</span><br>
+                                <span>Gênero: Animação, Aventura, Comédia e Fantasia</span><br>
+                                <span>Duração: 93m</span><br>
+                            </div>
+                            <div class="sinopse">
+                                <span>Sinopse : Quando o pai da princesa Fiona morre, Shrek deve assumir o reinado de
+                                    Tão
+                                    Tão Distante, mas logo percebe que não leva o menor jeito para a tarefa. Além disso,
+                                    não
+                                    tem a mínima vontade de trocar seu sujo...</span>
+                            </div>
+                        </div>
                     </div>
                 </a>
-                <a href="#">
+
+                <a href="">
                     <div class="card">
-                        <img src="assets/gato1.svg">
-                        <span>GATO DE BOTAS</span>
+                        <img src="assets/shrek4.svg" height="100%">
+                        <div class="info">
+                            <div class="nome">
+                                <span class="agora">SHREK PARA SEMPRE</span>
+                            </div>
+                            <div class="detalhe">
+                                <span>Ano de estreia: 2010</span><br>
+                                <span>Gênero: Animação, Aventura, Comédia e Fantasia</span><br>
+                                <span>Duração: 93m</span><br>
+                            </div>
+                            <div class="sinopse">
+                                <span>Sinopse: Shrek se encontra em uma versão alternativa de Tão Tão Distante, onde os
+                                    ogros são caçados, Rumpelstilskin é rei e Shrek e Fiona nunca se conheceram. Agora,
+                                    depende de Shrek desfazer tudo...</span>
+                            </div>
+                        </div>
                     </div>
                 </a>
-                <a href="#">
-                    <div class="card">
-                        <img src="assets/gato2.svg">
-                        <span>GATO DE BOTAS 2</span>
-                    </div>
-                </a>
+
             </div>
+
+            <div class="linha">
+                <a href="">
+                    <div class="card">
+                        <img src="assets/gato1.svg" height="100%">
+                        <div class="info">
+                            <div class="nome">
+                                <span class="agora">GATO DE BOTAS</span>
+                            </div>
+                            <div class="detalhe">
+                                <span>Ano de estreia: 2011</span><br>
+                                <span>Gênero: Animação, Aventura, Comédia e Fantasia</span><br>
+                                <span>Duração: 90m</span><br>
+                            </div>
+                            <div class="sinopse">
+                                <span>Sinopse: Sinopse: O Gato de Botas é um aventureiro sagaz que faz jus à fama de
+                                    intrépido. Ele quer encontrar o ganso dos ovos de ouro e contará com a ajuda de
+                                    amigos
+                                    nessa missão quase impossível.</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="">
+                    <div class="card">
+                        <img src="assets/gato2.svg" height="100%">
+                        <div class="info">
+                            <div class="nome">
+                                <span class="agora">GATO DE BOTAS 2</span>
+                            </div>
+                            <div class="detalhe">
+                                <span>Ano de estreia: 2022</span><br>
+                                <span>Gênero: Animação, Aventura, Comédia e Fantasia</span><br>
+                                <span>Duração: 110m</span><br>
+                            </div>
+                            <div class="sinopse">
+                                <span>Sinopse: Sinopse: O Gato de Botas finalmente compreende que sua inclinação pelo
+                                    perigo
+                                    pode ter severas consequências. Após queimar oito de suas nove vidas, ele embarca na
+                                    sua
+                                    mais importante aventura...</span>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+
+            </div>
+
         </div>
     </div>
 
