--- a/site/login.html
+++ b/site/login.html
@@ -21,6 +21,9 @@
                             <span>Senha:</span>
                             <input type="password" id="inputSenha" class="input">
                         </div>
+                        <a href="cadastro.html">
+                            <span>Não possui cadastro?</span>
+                        </a>
                     </div>
 
                     <div class="botoes">
@@ -29,7 +32,7 @@
                                 Voltar
                             </button>
                         </a>
-                        <a href="login.html">
+                        <a href="index.html">
                             <button class="botao ir">
                                 Entrar
                             </button>
