exemplos dos filmes

--- a/site/filme2.html
+++ b/site/filme2.html
@@ -38,19 +38,18 @@
             </a>
             <div class="quadro">
                 <div class="card">
-                    <img src="assets/shrek1.svg" height="100%">
+                    <img src="assets/shrek2.svg" height="100%">
                     <div class="info">
                         <div>
-                            <span class="agora">SHREK</span>
+                            <span class="agora">SHREK 2</span>
                         </div>
                         <div class="sinopse">
                             <span>Sinopse: Depois de enfrentar um dragão que cospe fogo e o terrível Lorde Farquaad para
                                 obter a mão da Princesa Fiona, Shrek agora enfrenta o seu maior desafio: os pais da
                                 noiva. Conhecer os pais dela era, provavelmente, a última coisa na mente de Shrek ao se
-                                casar com Fiona.
-                            </span>
+                                casar com Fiona.</span>
                         </div>
-                        <iframe width="815px" height="340px" src="https://www.youtube.com/embed/CwXOrWvPBPk"></iframe>
+                        <iframe width="730px" height="340px" src="https://www.youtube.com/embed/xBgSfhp5Fxo"></iframe>
                     </div>
                 </div>
 
@@ -59,12 +58,12 @@
                         <span class="agora">CURIOSIDADES</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">OSCAR 2002: Premiado a Melhor Filme de Animação </span>
-                        <span class="tamanho">OSCAR 2002: Indicado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">OSCAR 2005: Indicado a Melhor Filme de Animação</span>
+                        <span class="tamanho">OSCAR 2005: Indicado a Melhor Canção Original - "Accidentally in Love"</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">Globo de Ouro 2002: Indicado a Melhor Filme de Comédia ou Musical</span>
-                        <span class="tamanho">BAFTA 2002: Premiado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">GLOBO DE OURO 2005: Indicado a Melhor Canção Original - "Accidentally in Love"</span>
+                        <span class="tamanho">MTV MOVIE AWARDS 2005: Indicado a Melhor Comediante - Antonio Banderas</span>
                     </div>
                 </div>
             </div>
