--- a/site/filme3.html
+++ b/site/filme3.html
@@ -38,19 +38,18 @@
             </a>
             <div class="quadro">
                 <div class="card">
-                    <img src="assets/shrek1.svg" height="100%">
+                    <img src="assets/shrek3.svg" height="100%">
                     <div class="info">
                         <div>
-                            <span class="agora">SHREK</span>
+                            <span class="agora">SHREK 3</span>
                         </div>
                         <div class="sinopse">
-                            <span>Sinopse: Depois de enfrentar um dragão que cospe fogo e o terrível Lorde Farquaad para
-                                obter a mão da Princesa Fiona, Shrek agora enfrenta o seu maior desafio: os pais da
-                                noiva. Conhecer os pais dela era, provavelmente, a última coisa na mente de Shrek ao se
-                                casar com Fiona.
-                            </span>
+                            <span>Sinopse : Quando o pai da princesa Fiona morre, Shrek deve assumir o reinado de Tão
+                                Tão Distante, mas logo percebe que não leva o menor jeito para a tarefa. Além disso, não
+                                tem a mínima vontade de trocar seu sujo e fedorento pântano por uma vida de luxo no
+                                palácio.</span>
                         </div>
-                        <iframe width="815px" height="340px" src="https://www.youtube.com/embed/CwXOrWvPBPk"></iframe>
+                        <iframe width="730px" height="340px" src="https://www.youtube.com/embed/_MoIr7811Bs"></iframe>
                     </div>
                 </div>
 
