--- a/site/filme4.html
+++ b/site/filme4.html
@@ -38,19 +38,18 @@
             </a>
             <div class="quadro">
                 <div class="card">
-                    <img src="assets/shrek1.svg" height="100%">
+                    <img src="assets/shrek4.svg" height="100%">
                     <div class="info">
                         <div>
-                            <span class="agora">SHREK</span>
+                            <span class="agora">SHREK PARA SEMPRE</span>
                         </div>
                         <div class="sinopse">
-                            <span>Sinopse: Depois de enfrentar um dragão que cospe fogo e o terrível Lorde Farquaad para
-                                obter a mão da Princesa Fiona, Shrek agora enfrenta o seu maior desafio: os pais da
-                                noiva. Conhecer os pais dela era, provavelmente, a última coisa na mente de Shrek ao se
-                                casar com Fiona.
-                            </span>
+                            <span>Sinopse: Shrek se encontra em uma versão alternativa de Tão Tão Distante, onde os
+                                ogros são caçados, Rumpelstilskin é rei e Shrek e Fiona nunca se conheceram. Agora,
+                                depende de Shrek desfazer tudo que fez para trazer de volta seu mundo e recuperar seu
+                                Verdadeiro Amor.</span>
                         </div>
-                        <iframe width="815px" height="340px" src="https://www.youtube.com/embed/CwXOrWvPBPk"></iframe>
+                        <iframe width="730px" height="340px" src="https://www.youtube.com/embed/Ma9oseKpj9g"></iframe>
                     </div>
                 </div>
 
