--- a/site/filme5.html
+++ b/site/filme5.html
@@ -38,19 +38,17 @@
             </a>
             <div class="quadro">
                 <div class="card">
-                    <img src="assets/shrek1.svg" height="100%">
+                    <img src="assets/gato1.svg" height="100%">
                     <div class="info">
                         <div>
-                            <span class="agora">SHREK</span>
+                            <span class="agora">GATO DE BOTAS</span>
                         </div>
                         <div class="sinopse">
-                            <span>Sinopse: Depois de enfrentar um dragão que cospe fogo e o terrível Lorde Farquaad para
-                                obter a mão da Princesa Fiona, Shrek agora enfrenta o seu maior desafio: os pais da
-                                noiva. Conhecer os pais dela era, provavelmente, a última coisa na mente de Shrek ao se
-                                casar com Fiona.
-                            </span>
+                            <span>Sinopse: O Gato de Botas é um aventureiro sagaz que faz jus à fama de intrépido. Ele
+                                quer encontrar o ganso dos ovos de ouro e contará com a ajuda de amigos nessa missão
+                                quase impossível.</span>
                         </div>
-                        <iframe width="815px" height="340px" src="https://www.youtube.com/embed/CwXOrWvPBPk"></iframe>
+                        <iframe width="730px" height="340px" src="https://www.youtube.com/embed/1esRrwrmWzA"></iframe>
                     </div>
                 </div>
 
