--- a/site/filme6.html
+++ b/site/filme6.html
@@ -38,19 +38,17 @@
             </a>
             <div class="quadro">
                 <div class="card">
-                    <img src="assets/shrek1.svg" height="100%">
+                    <img src="assets/gato2.svg" height="100%">
                     <div class="info">
                         <div>
-                            <span class="agora">SHREK</span>
+                            <span class="agora">GATO DE BOTAS 2</span>
                         </div>
                         <div class="sinopse">
-                            <span>Sinopse: Depois de enfrentar um dragão que cospe fogo e o terrível Lorde Farquaad para
-                                obter a mão da Princesa Fiona, Shrek agora enfrenta o seu maior desafio: os pais da
-                                noiva. Conhecer os pais dela era, provavelmente, a última coisa na mente de Shrek ao se
-                                casar com Fiona.
-                            </span>
+                            <span>Sinopse: O Gato de Botas finalmente compreende que sua inclinação pelo perigo pode ter
+                                severas consequências. Após queimar oito de suas nove vidas, ele embarca na sua mais
+                                importante aventura em busca do tempo perdido.</span>
                         </div>
-                        <iframe width="815px" height="340px" src="https://www.youtube.com/embed/CwXOrWvPBPk"></iframe>
+                        <iframe width="730px" height="340px" src="https://www.youtube.com/embed/qtHcEfpYIow"></iframe>
                     </div>
                 </div>
 
