--- a/site/filmes.html
+++ b/site/filmes.html
@@ -48,15 +48,14 @@
                             </div>
                             <div class="sinopse">
                                 <span>Sinopse: Um ogro tem sua vida invadida por personagens de contos de fadas que
-                                    acabam
-                                    com a tranquilidade de seu lar. Ele faz um acordo pra resgatar uma princesa..
+                                    acabam com a tranquilidade de seu lar. Ele faz um acordo pra resgatar uma princesa..
                                 </span>
                             </div>
                         </div>
                     </div>
                 </a>
 
-                <a href="">
+                <a href="filme2.html">
                     <div class="card">
                         <img src="assets/shrek2.svg" height="100%">
                         <div class="info">
@@ -80,14 +79,14 @@
             </div>
 
             <div class="linha">
-                <a href="">
+                <a href="filme3.html">
                     <div class="card">
                         <img src="assets/shrek3.svg" height="100%">
                         <div class="info">
-                            <div class="nome">
+                            <div>
                                 <span class="agora">SHREK 3</span>
                             </div>
-                            <div class="detalhe">
+                            <div>
                                 <span>Ano de estreia: 2007</span><br>
                                 <span>Gênero: Animação, Aventura, Comédia e Fantasia</span><br>
                                 <span>Duração: 93m</span><br>
@@ -103,7 +102,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="filme4.html">
                     <div class="card">
                         <img src="assets/shrek4.svg" height="100%">
                         <div class="info">
@@ -127,7 +126,7 @@
             </div>
 
             <div class="linha">
-                <a href="">
+                <a href="filme5.html">
                     <div class="card">
                         <img src="assets/gato1.svg" height="100%">
                         <div class="info">
@@ -149,7 +148,7 @@
                     </div>
                 </a>
 
-                <a href="">
+                <a href="filme6.html">
                     <div class="card">
                         <img src="assets/gato2.svg" height="100%">
                         <div class="info">
