tela de personagens feita

--- a/site/filme3.html
+++ b/site/filme3.html
@@ -58,12 +58,14 @@
                         <span class="agora">CURIOSIDADES</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">OSCAR 2002: Premiado a Melhor Filme de Animação </span>
-                        <span class="tamanho">OSCAR 2002: Indicado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">BAFTA 2008: Indicado a Melhor Longa de Animação</span>
+                        <span class="tamanho">ANNIE 2008: Indicado a Melhor Direção em Longa de Animação</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">Globo de Ouro 2002: Indicado a Melhor Filme de Comédia ou Musical</span>
-                        <span class="tamanho">BAFTA 2002: Premiado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">Durante o filme, 82 cenários diferentes foram utilizados para a produção e
+                            desenvolvimento da história</span>
+                        <span class="tamanho">Foram criados exatos 1.373 personagens distintos e exclusivos apenas para
+                            essa sequência</span>
                     </div>
                 </div>
             </div>
