--- a/site/filme4.html
+++ b/site/filme4.html
@@ -58,12 +58,15 @@
                         <span class="agora">CURIOSIDADES</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">OSCAR 2002: Premiado a Melhor Filme de Animação </span>
-                        <span class="tamanho">OSCAR 2002: Indicado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">ANNIE 2011: indicado à Melhor Dublagem (Cameron Diaz), Efeitos Animados,
+                            Trilha Sonora, Design de Produção e Storyboarding;</span>
+                        <span class="tamanho">A música tocada é "Rumpel's Party Palace", uma versão remixada de "Fuga em
+                            Sol Menor"</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">Globo de Ouro 2002: Indicado a Melhor Filme de Comédia ou Musical</span>
-                        <span class="tamanho">BAFTA 2002: Premiado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">Rumpelstiltskin aparece no filme anterior da saga, com um visual diferente
+                            e ainda sem relevancia</span>
+                        <span class="tamanho">A música do flautista pertence a filho do autor de Shrek</span>
                     </div>
                 </div>
             </div>
