--- a/site/filme5.html
+++ b/site/filme5.html
@@ -57,12 +57,14 @@
                         <span class="agora">CURIOSIDADES</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">OSCAR 2002: Premiado a Melhor Filme de Animação </span>
-                        <span class="tamanho">OSCAR 2002: Indicado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">OSCAR 2012: Indicado a Melhor Animação</span>
+                        <span class="tamanho">GLOBO DE OURO 2012: Indicado a Melhor Filme de Animação</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">Globo de Ouro 2002: Indicado a Melhor Filme de Comédia ou Musical</span>
-                        <span class="tamanho">BAFTA 2002: Premiado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">Gato de Botas surge pela primeira vez em 1697, em um conto de fadas do
+                            escritor francês Charles Perrault.</span>
+                        <span class="tamanho">O gato faz inúmeras referências ao Zorro, personagem vivido por Banderas
+                            em A Máscara do Zorro e A Lenda do Zorro.</span>
                     </div>
                 </div>
             </div>
