--- a/site/filme6.html
+++ b/site/filme6.html
@@ -57,12 +57,14 @@
                         <span class="agora">CURIOSIDADES</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">OSCAR 2002: Premiado a Melhor Filme de Animação </span>
-                        <span class="tamanho">OSCAR 2002: Indicado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">OSCAR 2023: Indicado a Melhor Longa de Animação</span>
+                        <span class="tamanho">BAFTA 2023: Indicado a Melhor Longa de Animação</span>
                     </div>
                     <div class="linha">
-                        <span class="tamanho">Globo de Ouro 2002: Indicado a Melhor Filme de Comédia ou Musical</span>
-                        <span class="tamanho">BAFTA 2002: Premiado a Melhor Roteiro Adaptado</span>
+                        <span class="tamanho">O elenco de vozes original de ‘Gato de Botas 2: O Último Pedido’ conta com
+                            um ator brasileiro: Wagner Moura</span>
+                        <span class="tamanho verde">Um novo filme do Shrek está confirmado, com o seu roteiro finalizado
+                            e produção em desenvolvimento</span>
                     </div>
                 </div>
             </div>
